create independent application for person domain